# Setu

./: .gitignore  Cargo.toml  README.md  genesis-multi.json  genesis.json
api/: Cargo.toml  README.md
api/src/: handlers.rs  lib.rs  types.rs
config/: README.md
consensus/: Cargo.toml
consensus/src/: anchor_builder.rs  broadcaster.rs  dag.rs  dag_manager.rs  engine.rs  folder.rs  lib.rs  merkle_integration.rs  outcome_sink.rs  recent_cache.rs  root_executor.rs  router.rs  tee_verifier.rs
crates/: README.md
crates/setu-core/: Cargo.toml
crates/setu-enclave/: Cargo.toml
crates/setu-enclave/src/: attestation.rs  lib.rs  solver_task.rs  stf.rs  traits.rs
crates/setu-enclave/src/mock/: mod.rs
crates/setu-enclave/src/nitro/: mod.rs
crates/setu-keys/: Cargo.toml
crates/setu-keys/src/: address_derive.rs  crypto.rs  error.rs  key_derive.rs  key_identity.rs  keypair_file.rs  keystore.rs  lib.rs
crates/setu-merkle/: Cargo.toml
crates/setu-merkle/src/: aggregation.rs  binary.rs  error.rs  lib.rs  sparse.rs  storage.rs
crates/setu-move-vm/: Cargo.toml  build.rs
crates/setu-move-vm/src/: address_compat.rs  engine.rs  gas.rs  hybrid.rs  lib.rs  natives.rs  natives_b3.rs  object_runtime.rs  ptb_executor.rs  resolver.rs
crates/setu-network-anemo/: Cargo.toml
crates/setu-network-anemo/src/: config.rs  error.rs  generic_handler.rs  lib.rs  node_info.rs  peer_manager.rs  service.rs  transport.rs
crates/setu-network-anemo/src/discovery/: builder.rs  metrics.rs  mod.rs  server.rs
crates/setu-network-anemo/src/metrics/: mod.rs  transport_metrics.rs
crates/setu-network-anemo/src/state_sync/: builder.rs  metrics.rs  mod.rs  server.rs  store.rs
crates/setu-protocol/: Cargo.toml
crates/setu-protocol/src/: codec.rs  error.rs  event.rs  lib.rs  message.rs  rpc.rs  solver_http.rs  version.rs
crates/setu-router-core/: Cargo.toml
crates/setu-router-core/src/: router.rs  tests.rs
crates/setu-runtime/: Cargo.toml  INTEGRATION.md  README.md
crates/setu-runtime/examples/: basic_transfer.rs
crates/setu-runtime/src/: error.rs  executor.rs  lib.rs  state.rs  transaction.rs
crates/setu-transport/: Cargo.toml
crates/setu-transport/src/: error.rs  lib.rs
crates/setu-transport/src/http/: client.rs  middleware.rs  mod.rs  server.rs  types.rs
docker/: .dockerignore  .env.example  Dockerfile.solver  Dockerfile.validator  README.md  docker-compose.multi-validator.yml  docker-compose.yml  genesis-docker.json
docs/: DEPLOYMENT_WITH_KEYS.md  README.md  mvp-architecture.md
example_db/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
examples/: system_integration.rs
network/: Cargo.toml  README.md
network/examples/: basic.rs
network/src/: connectivity_manager.rs  constants.rs  counters.rs  error.rs  lib.rs  peer.rs  peer_manager.rs  transport.rs
network/src/application/: interface.rs  mod.rs  service.rs
network/src/protocols/: direct_send.rs  mod.rs  rpc.rs
network/src/protocols/wire/: codec.rs  handshake.rs  mod.rs
scripts/: README.md  build_stdlib.sh  deploy.sh  deploy_with_keys.sh  multi_validator_test.sh  start.sh  start_nodes.sh  (+9 more)
setu-benchmark/: Cargo.toml  README.md
setu-benchmark/benches/: tps_bench.rs
setu-benchmark/src/: benchmark.rs  client.rs  config.rs  main.rs  metrics.rs  report.rs
setu-cli/: Cargo.toml  README.md
setu-cli/src/: client.rs  config.rs  main.rs
setu-cli/src/commands/: config.rs  keygen.rs  mod.rs  router.rs  solver.rs  transfer.rs  user.rs  validator.rs
setu-router/: Cargo.toml
setu-router/examples/: router_demo.rs
setu-router/src/: consistent_hash.rs  lib.rs  shard.rs
setu-rpc/: Cargo.toml
setu-rpc/src/: lib.rs  messages.rs  registration.rs  router.rs  solver.rs  user.rs
setu-solver/: Cargo.toml  README.md
setu-solver/src/: http_server.rs  lib.rs  main.rs  network_client.rs  tee.rs
setu-validator/: Cargo.toml  README.md
setu-validator/src/: coin_reservation.rs  consensus_integration.rs  dag.rs  dag_replay.rs  infra_executor.rs  lib.rs  main.rs  network_service.rs  outcome_sink.rs  persistence.rs  router_manager.rs  sampling.rs  task_preparer.rs  user_handler.rs  verifier.rs
setu-validator/src/broadcaster/: anemo_adapter.rs  mod.rs
setu-validator/src/governance/: handler.rs  service.rs
setu-validator/src/network/: mod.rs  move_handler.rs  registration.rs  service.rs  solver_client.rs  tee_executor.rs  transfer_handler.rs  types.rs
setu-validator/src/network_adapter/: consensus_store.rs  mod.rs  router.rs  setu_handler.rs  sync_protocol.rs
setu-validator/src/protocol/: codec.rs  event.rs  message.rs  mod.rs  sync.rs
setu-validator/src/task_preparer/: batch.rs  mod.rs  single.rs
setu-validator/tests/: e2e_single_node_test.rs  persistence_recovery_test.rs  solver_tee3_test.rs
storage/: Cargo.toml  README.md
storage/src/: anchor_store.rs  anchor_store_backend.rs  cf_store_backend.rs  event_store.rs  event_store_backend.rs  event_store_old.rs  lib.rs  memory_object_store.rs  object_store.rs  rocks_event_store.rs  rocks_merkle_store.rs  rocks_object_store.rs  state.rs  state_provider.rs  subnet_state.rs  types.rs
storage/src/backends/: anchor.rs  cf.rs  event.rs  mod.rs  object.rs
storage/src/memory/: anchor_store.rs  cf_store.rs  event_store.rs  mod.rs  object_store.rs
storage/src/rocks/: anchor_store.rs  async_wrapper.rs  cf_store.rs  column_family.rs  db.rs  error.rs  event_store.rs  merkle_store.rs  mod.rs  object_store.rs
storage/src/rocks/core/: column_family.rs  config.rs  db.rs  error.rs  mod.rs
storage/src/state/: batch_snapshot.rs  manager.rs  mod.rs  provider.rs  shared.rs  speculative_overlay.rs
tools/move-compile/: Cargo.toml  README.md  build.sh
tools/move-compile/src/: main.rs
types/: Cargo.toml  README.md
types/src/: account_view.rs  coin.rs  consensus.rs  dynamic_field.rs  envelope.rs  event.rs  execution_outcome.rs  genesis.rs  governance.rs  lib.rs  merkle.rs  node.rs  object.rs  profile.rs  ptb.rs  registration.rs  relation.rs  resource.rs  sbt.rs  sbt_view.rs  subnet.rs  transfer.rs
types/src/task/: attestation.rs  gas.rs  mod.rs  solver_task.rs
(+91 files in other folders)
