[workspace]
members = [
    "types",
    "storage",                # RocksDB-based object storage
    "crates/setu-vlc",        # VLC Hybrid Logical Clock Library
    "crates/setu-merkle",     # Merkle tree implementations (Binary + Sparse)
    "crates/setu-core",       # Shared core library
    "crates/setu-keys",       # Cryptographic key management
    "crates/setu-protocol",   # Protocol message definitions
    "crates/setu-network-anemo", # Anemo-based P2P network (production)
    "crates/setu-router-core", # Core routing strategies
    "crates/setu-runtime",    # Simple runtime executor (pre-Move VM)
    "crates/setu-enclave",    # TEE Enclave abstraction (Mock + Nitro)
    "crates/setu-transport",  # HTTP/WS/gRPC transport for Validator↔Solver
    "consensus",
    "api",                    # HTTP API layer
    "setu-validator",         # Validator node (with embedded router)
    "setu-solver",            # Solver node
    "setu-rpc",               # RPC layer
    "setu-cli",               # CLI tool
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }

# anemo dependencies
anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "4b5f0f1d06a31c8ef78ec2e5b446bc633e4e2f77" }
anemo-build = { git = "https://github.com/mystenlabs/anemo.git", rev = "4b5f0f1d06a31c8ef78ec2e5b446bc633e4e2f77" }
anemo-cli = { git = "https://github.com/mystenlabs/anemo.git", rev = "4b5f0f1d06a31c8ef78ec2e5b446bc633e4e2f77" }
anemo-tower = { git = "https://github.com/mystenlabs/anemo.git", rev = "4b5f0f1d06a31c8ef78ec2e5b446bc633e4e2f77" }
