[package]
name = "consensus"
version.workspace = true
edition.workspace = true

[dependencies]
setu-types = { path = "../types" }
setu-vlc = { path = "../crates/setu-vlc" }
setu-merkle = { path = "../crates/setu-merkle" }
setu-storage = { path = "../storage" }
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
lru = "0.12"

[dev-dependencies]
setu-types = { path = "../types", features = ["test-utils"] }
tokio = { version = "1", features = ["full", "test-util"] }
