[package]
name = "consensus"
version.workspace = true
edition.workspace = true

[features]
default = []
# Phase 1 diagnostic instrumentation for consensus-root-self-consistency FDP.
# Adds DIAG probes to commit_build / apply_follower_finalized_cf /
# compute_state_root_from_events. Default OFF — zero overhead, zero behavior change.
# See docs/feat/consensus-root-self-consistency/design.md §3.6.
diag-root-drift = []

[dependencies]
setu-types = { path = "../types" }
setu-vlc = { path = "../crates/setu-vlc" }
setu-merkle = { path = "../crates/setu-merkle" }
setu-storage = { path = "../storage" }
blake3 = "1.5"
hex = "0.4"
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
parking_lot = "0.12"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
lru = "0.12"

[dev-dependencies]
setu-types = { path = "../types", features = ["test-utils"] }
tokio = { version = "1", features = ["full", "test-util"] }
