[package]
name = "setu-network"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal dependencies
setu-types = { path = "../types" }
setu-netcore = { path = "../netcore" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { workspace = true }
serde_json = "1.0"
bincode = "1.3"
bytes = { version = "1.5", features = ["serde"] }

# Networking
quinn = "0.10"
rustls = "0.21"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
parking_lot = "0.12"
dashmap = "5.5"
pin-project = "1.1"

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"
criterion = "0.5"
tracing-subscriber = "0.3"
