[package]
name = "setu-benchmark"
version.workspace = true
edition.workspace = true
description = "TPS Benchmark tool for Setu network"

[[bin]]
name = "setu-benchmark"
path = "src/main.rs"

[dependencies]
# Internal dependencies
setu-rpc = { path = "../setu-rpc" }
setu-types = { path = "../types" }

# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "sync", "time", "macros"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Statistics & Metrics
hdrhistogram = "7.5"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
futures = "0.3"
chrono = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tps_bench"
harness = false
