[package]
name = "setu-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "setu"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
core-types = { path = "../crates/core-types" }
setu-types = { path = "../types" }
setu-rpc = { path = "../setu-rpc" }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = "1.0"
toml = "0.8"

# Network
anemo = { workspace = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal UI
colored = "2.1"
indicatif = "0.17"

# Config
dirs = "5.0"

