[package]
name = "setu-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "setu"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
setu-types = { path = "../types" }
setu-rpc = { path = "../setu-rpc" }
setu-keys = { path = "../crates/setu-keys" }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = "1.0"
toml = "0.8"

# Network
anemo = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal UI
colored = "2.1"
indicatif = "0.17"

# Config
dirs = "5.0"

# UUID
uuid = { version = "1.0", features = ["v4"] }

# Crypto
hex = "0.4"
base64 = "0.21"
k256 = { version = "0.13", features = ["ecdsa"] }

