[package]
name = "setu-router"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
core-types = { path = "../crates/core-types" }
setu-core = { path = "../crates/setu-core" }
setu-types = { path = "../types" }
setu-vlc = { path = "../crates/setu-vlc" }

# External dependencies
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { workspace = true }
serde_json = "1.0"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
blake3 = "1.5"

[dev-dependencies]
tokio-test = "0.4"

