[package]
name = "setu-solver"
version.workspace = true
edition.workspace = true

[[bin]]
name = "setu-solver"
path = "src/main.rs"

[dependencies]
# Internal dependencies
setu-core = { path = "../crates/setu-core" }
setu-types = { path = "../types" }
setu-vlc = { path = "../crates/setu-vlc" }
setu-rpc = { path = "../setu-rpc" }
setu-enclave = { path = "../crates/setu-enclave" }
setu-keys = { path = "../crates/setu-keys" }
setu-transport = { path = "../crates/setu-transport" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# HTTP server (for sync task execution)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
hex = "0.4"
