[package]
name = "setu-validator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "setu-validator"
path = "src/main.rs"

[dependencies]
# Internal dependencies
setu-core = { path = "../crates/setu-core" }
setu-types = { path = "../types" }
setu-vlc = { path = "../crates/setu-vlc" }
core-types = { path = "../crates/core-types" }
consensus = { path = "../consensus" }
setu-router-core = { path = "../crates/setu-router-core" }
setu-rpc = { path = "../setu-rpc" }
setu-enclave = { path = "../crates/setu-enclave", features = ["mock"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework for HTTP API
axum = "0.7"
serde_json = "1.0"

# Crypto
sha2 = "0.10"
hex = "0.4"
bincode = "1.3"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
parking_lot = "0.12"
async-trait = "0.1"
serde = { workspace = true }

[dev-dependencies]
setu-solver = { path = "../setu-solver" }
