[package]
name = "setu-validator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "setu-validator"
path = "src/main.rs"

[dependencies]
# Internal dependencies
setu-core = { path = "../crates/setu-core" }
setu-types = { path = "../types" }
setu-vlc = { path = "../crates/setu-vlc" }
consensus = { path = "../consensus" }
setu-router-core = { path = "../crates/setu-router-core" }
setu-rpc = { path = "../setu-rpc" }
setu-enclave = { path = "../crates/setu-enclave", features = ["mock"] }
setu-storage = { path = "../storage" }
setu-api = { path = "../api" }
setu-network-anemo = { path = "../crates/setu-network-anemo" }
setu-keys = { path = "../crates/setu-keys" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework for HTTP API
axum = { version = "0.7", features = ["macros"] }
serde_json = "1.0"

# Crypto
sha2 = "0.10"
hex = "0.4"
bincode = "1.3"
bcs = "0.1"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
parking_lot = "0.12"
async-trait = "0.1"
serde = { workspace = true }

[dev-dependencies]
setu-solver = { path = "../setu-solver" }
