[package]
name = "setu-validator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "setu-validator"
path = "src/main.rs"

[dependencies]
# Internal dependencies
setu-core = { path = "../crates/setu-core" }
setu-types = { path = "../types" }
setu-vlc = { path = "../crates/setu-vlc" }
setu-protocol = { path = "../crates/setu-protocol" }
consensus = { path = "../consensus" }
setu-router-core = { path = "../crates/setu-router-core" }
setu-rpc = { path = "../setu-rpc" }
setu-transport = { path = "../crates/setu-transport" }
# Note: setu-enclave dependency removed - Validator now uses setu-types::task directly
setu-storage = { path = "../storage" }
setu-api = { path = "../api" }
setu-network-anemo = { path = "../crates/setu-network-anemo" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework for HTTP API
axum = { version = "0.7", features = ["macros"] }
serde_json = "1.0"

# HTTP client for sync communication with Solver (now via setu-transport)
reqwest = { version = "0.12", features = ["json"] }

# Crypto
sha2 = "0.10"
hex = "0.4"
bincode = "1.3"
bcs = "0.1"
bytes = "1.5"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
parking_lot = "0.12"
async-trait = "0.1"
serde = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5.5"  # Lock-free concurrent HashMap for TPS optimization

[dev-dependencies]
setu-solver = { path = "../setu-solver" }
