[package]
name = "setu-storage"
version.workspace = true
edition = "2021"

[features]
default = []
test-utils = ["setu-types/test-utils"]
# Phase 1 diagnostic instrumentation for consensus-root-self-consistency FDP.
# Adds a thread-local gate + probe to apply_state_change to catch write-GSM
# writes that bypass apply_committed_events.
# See docs/feat/consensus-root-self-consistency/design.md §3.4.
diag-root-drift = []

[dependencies]
setu-types = { path = "../types" }
setu-merkle = { path = "../crates/setu-merkle" }
serde = { workspace = true }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"
hex = "0.4"
async-trait = "0.1"
dashmap = "5.5"  # Lock-free concurrent HashMap for in-memory stores
arc-swap = "1"   # Lock-free atomic pointer swap for read-write separation

# RocksDB dependencies
rocksdb = "0.22"
bincode = "2.0.0-rc.3"  # Use bincode 2.0 for Encode/Decode traits
bcs.workspace = true
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
setu-types = { path = "../types", features = ["test-utils"] }
