[package]
name = "setu-types"
version.workspace = true
edition = "2021"

[features]
default = []
test-utils = []

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"
thiserror = "1.0"
bincode = "2.0"
bcs.workspace = true
setu-vlc = { path = "../crates/setu-vlc" }
ed25519-dalek = { version = "2.1", features = ["serde"] }
