[package]
name = "setu-core"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal dependencies
setu-types = { path = "../../types" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
parking_lot = "0.12"
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"

