[package]
name = "setu-enclave"
version.workspace = true
edition.workspace = true
description = "TEE Enclave abstraction for Setu - Stateless Transition Function execution"

[features]
default = ["mock"]
# Mock enclave for development and testing
mock = []
# AWS Nitro Enclave for production
nitro = ["aws-nitro-enclaves-nsm-api"]

[dependencies]
setu-types = { path = "../../types" }
setu-runtime = { path = "../setu-runtime" }
setu-merkle = { path = "../setu-merkle" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bcs = "0.1"

# Crypto
sha2 = "0.10"
rand = "0.8"

# Async
tokio = { version = "1", features = ["sync", "time", "rt"] }
async-trait = "0.1"

# Utils
uuid = { version = "1.0", features = ["v4"] }
hex = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# AWS Nitro (optional, for production)
aws-nitro-enclaves-nsm-api = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
