[package]
name = "setu-merkle"
version.workspace = true
edition.workspace = true
description = "Merkle tree implementations for Setu: Sparse Merkle Tree for object state and Binary Merkle Tree for event commitments"
license = "Apache-2.0"

[dependencies]
# Serialization
serde = { workspace = true }
bincode = "2.0.0-rc.3"

# Cryptography - BLAKE3 for high-performance hashing (3-5x faster than SHA256)
blake3 = "1.5"

# Persistent data structures - O(1) clone via structural sharing (C1 optimization)
im = "15.1"

# Utilities
thiserror = "1.0"
hex = "0.4"
lazy_static = "1.4"

[dev-dependencies]
rand = "0.8"
