[package]
name = "setu-move-vm"
version.workspace = true
edition.workspace = true
description = "Move VM execution engine for Setu — Sui fork integration"

[dependencies]
# Internal
setu-types = { path = "../../types" }
setu-runtime = { path = "../setu-runtime" }

# Move VM core (from Sui fork, 5 crates)
move-core-types        = { workspace = true }
move-vm-runtime        = { workspace = true }
move-vm-types          = { workspace = true }
move-binary-format     = { workspace = true }
move-bytecode-verifier = { workspace = true }
better_any = "0.1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcs = "0.1"

# Error handling & utilities
thiserror = "1.0"
tracing = "0.1"
hex = "0.4"
blake3 = "1.5"
smallvec = "1.13"
indexmap = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
