[package]
name = "setu-network-anemo"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal dependencies
setu-types = { path = "../../types" }

# Anemo P2P framework (from workspace)
anemo = { workspace = true }
anemo-tower = { workspace = true }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { workspace = true }
serde_json = "1.0"
bincode = "1.3"
bytes = { version = "1.5", features = ["serde"] }
bcs = "0.1"

# Networking and crypto
rustls = "0.23"
ed25519-consensus = "2.1"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
parking_lot = "0.12"
dashmap = "5.5"
rand = "0.8"
hex = "0.4"

# Tower middleware
tower = { version = "0.5", features = ["full"] }

# Metrics
prometheus = "0.13"

[dev-dependencies]
tempfile = "3.8"
tracing-subscriber = "0.3"

[features]
default = []
metrics = []
