[package]
name = "setu-protocol"
version.workspace = true
edition.workspace = true
description = "Setu protocol utilities: versioning, codecs, error types, and Validator↔Solver communication"

[dependencies]
# Internal dependencies
setu-types = { path = "../../types" }
setu-enclave = { path = "../setu-enclave" }

# Serialization
serde = { workspace = true }
serde_json = "1.0"
bincode = "1.3"
bytes = { version = "1.5", features = ["serde"] }

# Utilities
thiserror = "1.0"
