[package]
name = "setu-router-core"
version.workspace = true
edition.workspace = true
description = "Core routing strategies and shard management for Setu"

[dependencies]
# Internal dependencies
setu-types = { path = "../../types" }
setu-core = { path = "../setu-core" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
parking_lot = "0.12"
uuid = { version = "1.6", features = ["v4"] }

# Hashing for consistent routing
blake3 = "1.5"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
