[package]
name = "setu-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
# Types
setu-types = { path = "../../types" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "basic_transfer"
path = "examples/basic_transfer.rs"

[package.metadata.docs.rs]
all-features = true
